# matrix-toy-lang

./: .gitignore  README.md  compile_full.sh  compiler.py  pyproject.toml
examples/: main-input.py  main_input.mx
src/: __init__.py  dialect.py  ir-generator.py  ir_generator.py  middle-end.py  middle_end.py  parser.py  standard_lowering.py
