[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-toy-lang"
version = "0.1.0"
description = "A matrix operations compiler with optimization capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "xdsl>=0.14.0",
]

[project.scripts]
matrixc = "matrix_toy_lang.compiler:main"

[tool.setuptools]
packages = ["matrix_toy_lang"]

[tool.setuptools.package-dir]
"matrix_toy_lang" = "."
"matrix_toy_lang.src" = "src"